# nur-cardiorenal-poc

./: .gitignore  E156-PROTOCOL.md  README.md  conftest.py  pyproject.toml  pytest.ini
docs/: RESULTS_v0.1.1.md  posterior_cube.json
docs/superpowers/plans/: 2026-04-23-nur-pce-implementation.md
docs/superpowers/specs/: 2026-04-23-nur-pce-design.md
fixtures/: populations_synth.json  tier1_holdout_finearts_synth.json  tier1_synth.json  tier1_train_synth.json
fixtures/aact_synth/: designs.csv  interventions.csv  studies.csv
scripts/: preflight.py
src/nur_pce/: __init__.py  pipeline.py  schema.py
src/nur_pce/ingest/: __init__.py  aact.py  ipd_reconstruct.py  subgroups.py
src/nur_pce/model/: __init__.py  diagnostics.py  hte_bayes.py
src/nur_pce/output/: __init__.py  cube.py
src/nur_pce/transport/: __init__.py  g_formula.py  populations.py
src/nur_pce/validate/: __init__.py  baselines.py  holdout.py  holdout_runner.py
tests/: __init__.py  test_ingest_aact.py  test_ingest_ipd_reconstruct.py  test_ingest_subgroups.py  test_model_diagnostics.py  test_model_hte_bayes.py  test_model_tier2.py  test_output_cube.py  test_pipeline.py  test_schema.py  test_transport_g_formula.py  test_transport_populations.py  test_validate_baselines.py  test_validate_holdout.py  test_validate_holdout_runner.py  test_viewer_smoke.py
viewer/: index.html
