[project]
name = "nur-pce"
version = "0.1.0"
description = "NUR-PCE — Personalised Counterfactual Engine for cardiorenal trials"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=15",
    "pymc>=5.10",
    "arviz>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=4", "selenium>=4.18"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
